--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -31,21 +31,20 @@
                                     {% for grupo_documento in grupo_documentos %}
                                         <li>
                                             <span class="col-md-4"><i class="fad fa-lg fa-file-alt"></i> {{ grupo_documento.nombre }}</span>
-                                            {% if grupo_documento.solo_proceso or perms.TalentoHumano.can_gestioncompletasgi or not grupo_documento.solo_proceso and proceso == colaborador_proceso %}
+                                            {% if grupo_documento.solo_proceso or perms.TalentoHumano.can_gestioncompletasgi or not grupo_documento.solo_proceso and proceso in colaborador_proceso %}
                                                 {% if not perms.TalentoHumano.can_gestioncompletasgi %}
                                                     {% for pro in grupo_documento.proceso %}
-                                                        {% if pro == colaborador_proceso %}
+                                                        {% if pro in colaborador_proceso %}
                                                             {% include 'SGI/documentos/BotonesGestion/botonCrearDocumento.html' %}
                                                         {% endif %}
                                                     {% endfor %}
                                                 {% else %}
                                                     {% include 'SGI/documentos/BotonesGestion/botonCrearDocumento.html' %}
                                                 {% endif %}
-                                                {% if not grupo_documento.solo_proceso and proceso == colaborador_proceso and not perms.TalentoHumano.can_gestioncompletasgi %}
+                                                {% if not grupo_documento.solo_proceso and proceso in colaborador_proceso and not perms.TalentoHumano.can_gestioncompletasgi %}
                                                     {% include 'SGI/documentos/BotonesGestion/botonCrearDocumento.html' %}
                                                 {% endif %}
                                             {% endif %}
-
                                             <ul>
                                                 {% for documento in documentos %}
                                                     {% if documento.grupo_documento_id == grupo_documento.id %}
