EVA-163 feat: En las certtificaciones bancaria solo se permiten cargar pdf.

--- a/Administracion/templates/Administracion/_common/_modal_gestionar_entidad_bancaria.html
+++ b/Administracion/templates/Administracion/_common/_modal_gestionar_entidad_bancaria.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="form-group col-12">
                         {% if objeto %}
-                            {% input_file_tag 'certificacion' 'Certificación Bancaria' placeholder="Seleccione un archivo" invalido=errores.logo accept=".docx, .pdf" mensaje_validacion='Por favor seleccione un archivo'%}
+                            {% input_file_tag 'certificacion' 'Certificación Bancaria' placeholder="Seleccione un archivo" invalido=errores.logo accept=".pdf" mensaje_validacion='Por favor seleccione un archivo'%}
                         {% else %}
                             {% input_file_tag 'certificacion' 'Certificación Bancaria' placeholder="Seleccione un archivo" required="" invalido=errores.logo accept=".docx, .pdf" mensaje_validacion='Por favor seleccione un archivo'%}
                         {% endif %}
