--- a/Administracion/templates/Administracion/Autenticacion/_common/base_autenticacion.html
+++ b/Administracion/templates/Administracion/Autenticacion/_common/base_autenticacion.html
@@ -6,7 +6,7 @@
         <title>
             {% block titulo %}{% endblock %}
         </title>
-        <meta name="description" content="Login">
+        <meta name="description" content="EVA Autenticación">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, minimal-ui">
         <!-- Call App Mode on ios devices -->
