--- a/Administracion/templates/Administracion/Autenticacion/correo/correo.html
+++ b/Administracion/templates/Administracion/Autenticacion/correo/correo.html
@@ -7,7 +7,7 @@
     <title>
         Restablecer contraseña
     </title>
-    <meta name="description" content="Login">
+    <meta name="description" content="EVA Autenticación">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, minimal-ui">
     <!-- Call App Mode on ios devices -->
@@ -19,7 +19,7 @@
     <link rel="stylesheet" media="screen, print" href="{% static  'EVA/Plantilla/css/app.bundle.css' %}">
     <!-- Place favicon.ico in the root directory -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'EVA/Plantilla/img/favicon/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'EVA/Plantilla/img/favicon/favicon-32x32.png' %}">
+    <link rel="icon" type="image/svg+xml" sizes="32x32" href="{% static 'EVA/Plantilla/img/custom/logo-eva-rd.svg' %}">
     <link rel="mask-icon" href="{% static 'EVA/Plantilla/img/favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
     <!-- Optional: page related CSS-->
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-brands.css' %}">
