--- a/EVA/templates/EVA/_common/base.html
+++ b/EVA/templates/EVA/_common/base.html
@@ -22,8 +22,10 @@
         <link rel="mask-icon" href="{% static 'EVA/Plantilla/img/favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/toastr/toastr.css' %}">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/sweetalert2/sweetalert2.bundle.css'%}">
-        <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/custom/generales.css' %}">
         {% block styles %}
+        {% endblock %}
+        <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/custom/generales.css' %}">
+        {% block styles_posgenerales %}
         {% endblock %}
     </head>
    <body class="mod-bg-1 mod-nav-link">
