EVA-165 feat: Se modifica el tag general select_tag para soportar agrupación.
Adicional se le cambia el color a la letra con la que se muestra la agrupación para que se note más las diferencias con las opciones dentro del grupo.

--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -180,3 +180,6 @@ position: relative;
     background-size: cover;
     background-color: #11564f
 }
+.select2-container--default .select2-results__group {
+    color: var(--theme-secondary)
+}
