EVA-165 feat: Las opciones de los subtipos de movimiento se muestran agrupadas por  tipo y categoría de movimeinto en el modal de crear/editar un movimiento a un flujo de caja.

--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/modal-crear-editar.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/modal-crear-editar.html
@@ -30,7 +30,7 @@
 
                 <div class="form-row">
                     <div class="form-group col-12">
-                        {% select_tag subtipos_movimientos 'subtipo_movimiento_id' 'Seleccione un subtipo de movimiento' texto_label="Subtipo de Movimiento" value=flujo_detalle.subtipo_movimiento_id required="" mensaje_validacion='Por favor seleccione un subtipo de movimiento.' invalido=errores.subtipo_movimiento %}
+                        {% select_tag subtipos_movimientos 'subtipo_movimiento_id' 'Seleccione un subtipo de movimiento' agrupar=True texto_label="Subtipo de Movimiento" value=flujo_detalle.subtipo_movimiento_id required="" mensaje_validacion='Por favor seleccione un subtipo de movimiento.' invalido=errores.subtipo_movimiento %}
                     </div>
                 </div>
 
