--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaProcesos/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaProcesos/index.html
@@ -34,7 +34,7 @@
                                 <div class="panel-group">
                                     <div class="panel-body">
                                         <div class="table-responsive">
-                                            <table class="table table-bordered w-100" id="dataTable">
+                                            <table class="table table-bordered w-100" id="dataTable" data-flujo-contrato="false">
                                                 <thead class="bg-primary-600">
                                                     <tr>
                                                         <th>Proceso</th>
@@ -83,9 +83,8 @@
     <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.export.js' %}"></script>
-    <script src="{% static 'EVA/Plantilla/js/custom/exportar_tabla.js' %}"></script>
-    <script src="{% static 'Financiero/js/FlujoCaja/exportarTablas/exportarTablasFlujoCajaProcesos.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/custom/exportar_tabla.js' %}"></script
     <script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
-    <script src="{% static 'Financiero/js/FlujoCaja/filtroFlujoCajaFinanciero.js' %}"></script>
+    <script src="{% static 'Financiero/js/FlujoCaja/indexFlujoCaja.js' %}"></script>
     <script src="{% static 'Financiero/js/FlujoCaja/volverAtras.js' %}"></script>
 {% endblock %}
