--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/modal-crear-editar.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/modal-crear-editar.html
@@ -45,10 +45,17 @@
                         {% input_date_tag 'fecha_movimiento' 'Fecha de movimiento' placeholder="Seleccione una fecha" required="" autocomplete="off" value=flujo_detalle.fecha_movimiento  mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_movimiento %}
                     </div>
                 </div>
+
+                <div class="form-row">
+                    <div class="form-group col-12">
+                        {% input_textarea_tag 'comentarios' 'Comentarios' placeholder="(Opcional) Ingrese comentarios si aplica" maxlength="100" mensaje_validacion='Por favor ingrese los comentarios.' invalido=errores.comentarios %}
+                    </div>
+                </div>
+
                 {% if opcion == 'editar' %}
                     <div class="form-row">
                         <div class="form-group col-12">
-                            {% input_textarea_tag 'comentarios' 'Comentarios' placeholder="Ingrese los comentarios" maxlength="100" required="" mensaje_validacion='Por favor ingrese los comentarios.' invalido=errores.comentarios %}
+                            {% input_textarea_tag 'motivo' 'Motivo' placeholder="Ingrese el motivo de la edición" maxlength="100" required="" mensaje_validacion='Por favor ingrese el motivo.' invalido=errores.motivo %}
                         </div>
                     </div>
                 {% endif %}
