--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaProcesos/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaProcesos/index.html
@@ -3,6 +3,7 @@
 {% load static %}
 <title>{% block titulo %}Procesos{% endblock %}</title>
 {% block styles %}
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-duotone.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/datagrid/datatables/datatables.bundle.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/select2/select2.bundle.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
@@ -13,7 +14,7 @@
     <div class="panel-container show">
         <div class="header">
              <h1 class="header-title">
-                 <i class="subheader-icon fal fa-usd-square"></i> Flujos de Caja por Procesos <span class='fw-300'></span>
+                 <i class="subheader-icon fad fa-usd-square"></i> Flujos de Caja por Procesos <span class='fw-300'></span>
                  <br>
                  <br>
              </h1>
@@ -38,7 +39,7 @@
                                                 <thead class="bg-primary-600">
                                                     <tr>
                                                         <th>Proceso</th>
-                                                        <th>Descipción</th>
+                                                        <th>Descripción</th>
                                                         {% if perms.Financiero.view_flujocajaencabezado %}
                                                         <th>Estado del Flujo de Caja</th>
                                                         <th>Ver Flujo de Caja</th>
