--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaProcesos/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaProcesos/index.html
@@ -52,17 +52,17 @@
                                                             <td>{{ proceso.nombre }}</td>
                                                             <td>{{ proceso.objeto }}</td>
                                                             {% if perms.Financiero.view_flujocajaencabezado %}
-                                                            <td>
-                                                                {% if proceso.proceso_usuario or perms.Financiero.can_gestion_flujos_de_caja %}
-                                                                    <span class="badge badge-primary">{{ proceso.flujocajaencabezado_set.first.estado }}</span>
-                                                                {% endif %}
-                                                            </td>
-                                                            <td>
-                                                                {% if proceso.proceso_usuario or perms.Financiero.can_gestion_flujos_de_caja %}
-                                                                    <a href="#" onclick="guardarRutaLocal('{% url 'Financiero:flujo-caja-procesos-detalle' proceso.id REAL fecha.year fecha.month %}')"><span class="badge badge-primary fw-300 ml-auto">Real</span><br></a>
-                                                                    <a href="#" onclick="guardarRutaLocal('{% url 'Financiero:flujo-caja-procesos-detalle' proceso.id PROYECCION fecha.year fecha.month %}')"><span class="badge badge-primary fw-300 ml-auto">Proyección</span></a>
-                                                                {% endif %}
-                                                            </td>
+                                                                <td>
+                                                                    {% if proceso.proceso_usuario or perms.Financiero.can_gestion_flujos_de_caja %}
+                                                                        <span class="badge badge-primary">{{ proceso.estado_fc | default_if_none:'' }}</span>
+                                                                    {% endif %}
+                                                                </td>
+                                                                <td>
+                                                                    {% if proceso.proceso_usuario or perms.Financiero.can_gestion_flujos_de_caja %}
+                                                                        <a href="#" onclick="guardarRutaLocal('{% url 'Financiero:flujo-caja-procesos-detalle' proceso.id REAL fecha.year fecha.month %}')"><span class="badge badge-primary fw-300 ml-auto">Real</span><br></a>
+                                                                        <a href="#" onclick="guardarRutaLocal('{% url 'Financiero:flujo-caja-procesos-detalle' proceso.id PROYECCION fecha.year fecha.month %}')"><span class="badge badge-primary fw-300 ml-auto">Proyección</span></a>
+                                                                    {% endif %}
+                                                                </td>
                                                             {% endif %}
                                                         </tr>
                                                     {% endfor %}
