EVA-159 fix: Se soluciona problema que no permitía acceder al perfil del colaborador desde la tarjeta de la barra de navegación lateral o a través de la tarjeta que se despliega hacer clic en la foto de la parte superior derecha.

--- a/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
@@ -14,7 +14,7 @@
                     {% if perms.TalentoHumano.view_colaborador %}
                     <div class="dropdown-menu">
                         {% if perms.TalentoHumano.view_colaborador %}
-                        <a class="dropdown-item" href="{% url 'TalentoHumano:colaboradores-perfil' colaborador.usuario_id %}">Ver perfil</a>
+                        <a class="dropdown-item" href="{% url 'TalentoHumano:colaboradores-perfil' colaborador.id %}">Ver perfil</a>
                         {% endif %}
                         {% if perms.TalentoHumano.change_colaborador %}
                         <a class="dropdown-item" href="{% url 'TalentoHumano:colaboradores-editar' id_tarjeta %}">Editar</a>
