hotfix: Se corrigue que en algunos casos en lso movimeintos del flujo de caja esta mostrando "None" en la columan de comentarios cuando  estos estan en null en la BD.

--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/detalle_flujo_caja.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/detalle_flujo_caja.html
@@ -86,7 +86,7 @@
                                                             <td>{{ movimiento.fecha_movimiento|date:'Y-m-d' }}</td>
                                                             <td><strong>{{ movimiento.subtipo_movimiento }}</strong><br>{{ movimiento.agrupacion }}</td>
                                                             <td class="t-a-e">{{ movimiento.valor|intcomma }}</td>
-                                                            <td>{{ movimiento.comentarios }}</td>
+                                                            <td>{{ movimiento.comentarios | default_if_none:'' }}</td>
                                                             <td>{{ movimiento.fecha_crea|date:'Y-m-d' }}</td>
                                                             <td>{{ movimiento.fecha_modifica|date:'Y-m-d' }}</td>
                                                             {% if perms.TalentoHumano.can_access_usuarioespecial or perms.TalentoHumano.view_flujos_de_caja %}
