hotfix: Se soluciona problema que al editar un movimiento en el flujo de caja se estaba perdiendo el comentario ingresado anteriormente.

--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/modal-crear-editar.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/modal-crear-editar.html
@@ -48,7 +48,7 @@
 
                 <div class="form-row">
                     <div class="form-group col-12">
-                        {% input_textarea_tag 'comentarios' 'Comentarios' placeholder="(Opcional) Ingrese comentarios si aplica" maxlength="100" mensaje_validacion='Por favor ingrese los comentarios.' invalido=errores.comentarios %}
+                        {% input_textarea_tag 'comentarios' 'Comentarios' placeholder="(Opcional) Ingrese comentarios si aplica" maxlength="100" value=flujo_detalle.comentarios mensaje_validacion='Por favor ingrese los comentarios.' invalido=errores.comentarios %}
                     </div>
                 </div>
 
