--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/detalle_flujo_caja.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/detalle_flujo_caja.html
@@ -49,8 +49,8 @@
                             {% endif %}
                         </div>
                         <div class="panel-hdr">
-                            {% if perms.Financiero.can_access_usuarioespecial %}
                                 <div class="col-lg-8 col-md-4 col-sm-2">
+                                {% if perms.Financiero.can_access_usuarioespecial or perms.Financiero.can_gestion_flujos_de_caja %}
                                     <div class="form-group col-12">
                                         <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons" style="float: left">
                                             <label class="btn btn-default waves-effect waves-themed" onclick="cambioCheck('vigente')">
@@ -61,8 +61,8 @@
                                             </label>
                                         </div>
                                     </div>
+                                {% endif %}
                                 </div>
-                            {% endif %}
                             <div class="col-lg-2 col-md-4 col-sm-5" style="float: right;">
                                 {% select_tag anios 'filtro_anio_id' anios.first.campo_texto value=anio_seleccion primer_valor=True primer_campo_valor=anios.first.campo_valor %}
                             </div>
@@ -85,10 +85,10 @@
                                                         <th>Comentarios</th>
                                                         <th>Creado</th>
                                                         <th>Modificado</th>
-                                                        {% if perms.TalentoHumano.can_access_usuarioespecial or perms.TalentoHumano.view_flujos_de_caja %}
+                                                        {% if perms.TalentoHumano.can_access_usuarioespecial or perms.Financiero.can_gestion_flujos_de_caja %}
                                                             <th>Estado</th>
                                                         {% endif %}
-                                                        {% if perms.Financiero.change_flujocajadetalle or perms.Financiero.delete_flujocajadetalle or perms.TalentoHumano.view_flujos_de_caja %}
+                                                        {% if perms.Financiero.change_flujocajadetalle or perms.Financiero.delete_flujocajadetalle or perms.Financiero.can_gestion_flujos_de_caja %}
                                                             <th>Acción</th>
                                                         {% endif %}
                                                     </tr>
@@ -102,10 +102,10 @@
                                                             <td>{{ movimiento.comentarios | default_if_none:'' }}</td>
                                                             <td>{{ movimiento.fecha_crea|date:'Y-m-d' }}</td>
                                                             <td>{{ movimiento.fecha_modifica|date:'Y-m-d' }}</td>
-                                                            {% if perms.TalentoHumano.can_access_usuarioespecial or perms.TalentoHumano.view_flujos_de_caja %}
+                                                            {% if perms.TalentoHumano.can_access_usuarioespecial or perms.Financiero.can_gestion_flujos_de_caja %}
                                                                 <td><span class="badge {% if movimiento.estado_id == ELIMINADO %} badge-danger {% elif movimiento.estado_id == EDITADO %} bg-primary-900 {% else %} badge-primary {% endif %} fw-300 ml-auto">{{ movimiento.estado }}</span></td>
                                                             {% endif %}
-                                                            {% if perms.Financiero.change_flujocajadetalle or perms.Financiero.delete_flujocajadetalle or perms.TalentoHumano.view_flujos_de_caja %}
+                                                            {% if perms.Financiero.change_flujocajadetalle or perms.Financiero.delete_flujocajadetalle or perms.Financiero.can_gestion_flujos_de_caja %}
                                                                 <td>
                                                                     {% if movimiento.estado_id != ELIMINADO %}
                                                                         {% if perms.Financiero.change_flujocajadetalle %}
@@ -115,7 +115,7 @@
                                                                             <a class="fad fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ movimiento.id }}"  {% if fecha_minima_mes|date:"Y-m-d" <= movimiento.fecha_movimiento|date:"Y-m-d" and movimiento.estado_id == VIGENTE or movimiento.estado_id == EDITADO %} href="javascript:void(0);"  onclick="fConfirmarEliminar({{ movimiento.id }})" {% else %}style="color: grey" {% endif %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-danger-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
                                                                         {% endif %}
                                                                     {% endif %}
-                                                                    {% if perms.TalentoHumano.can_access_usuarioespecial or perms.TalentoHumano.view_flujos_de_caja %}
+                                                                    {% if perms.TalentoHumano.can_access_usuarioespecial or perms.Financiero.can_gestion_flujos_de_caja %}
                                                                         {% if movimiento.estado_id == EDITADO or movimiento.estado_id == ELIMINADO %}
                                                                         <a class="fad fa-2x fa-custom fa-list-alt" id="eliminar_{{ movimiento.id }}" href="javascript:void(0);"  onclick="abrirModalHistorial('{% url 'Financiero:flujo-caja-movimiento-historial' movimiento.id %}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Historial"></a>
                                                                         {% endif %}
