hotfix: Se soluciona problema al editar un movimiento en el flujo de caja que hacia que se agregaran ceros al valor.
El problema era causado porque el valor del campo a renderizar el html se pasaba con "," en el separtador decimal y debia ser "." que es como esta configurado el plugin inputmask.

--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/modal-crear-editar.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/modal-crear-editar.html
@@ -1,5 +1,6 @@
 {% load eva_tags %}
 {% load static %}
+{% load humanize %}
  {% if contrato %}
     {% if opcion == 'editar' %}
         <form id="formAddMovimiento" action="{% url 'Financiero:flujo-caja-movimiento-editar' flujo_detalle.id %}" id="flujo-caja-contratos-form" method="post" class="needs-validation" novalidate>
@@ -36,7 +37,7 @@
 
                 <div class="form-row">
                     <div class="form-group col-12">
-                        {% input_currency_tag 'valor' 'Valor' placeholder="Ingrese una Valor" required="" min="0.00" max="99999999999.99" step="0.01" value=flujo_detalle.valor mensaje_validacion='Por favor ingrese un valor.' invalido=errores.descripcion removeMaskOnSubmit=True %}
+                        {% input_currency_tag 'valor' 'Valor' placeholder="Ingrese una Valor" required="" min="0.00" max="99999999999.99" step="0.01" value=flujo_detalle.valor|intcomma:False mensaje_validacion='Por favor ingrese un valor.' invalido=errores.descripcion removeMaskOnSubmit=True %}
                     </div>
                 </div>
 
